--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -26,12 +26,12 @@ http {
     # Hide nginx server version
     server_tokens off;
 
-    # Compression.
+    # Compression
     gzip on;
     gzip_proxied any;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
     gzip_vary on;
-    gzip_disable "msie6";
+    gzip_disable 'msie6';
 
     include /etc/nginx/mime.types;
 
@@ -39,7 +39,6 @@ http {
         #listen 443 ssl;
         listen 80;
         listen [::]:80;
-        server_name cms.test www.cms.test;
         root /var/www/public;
 
         #ssl on;
