--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.16.1",
+        "postcss-pxtorem": "^5.1.1",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
